ethernet_slirp: Add libslirp EthernetConnection backend
The existing Ethernet connection implementation is PCAP-based. This
allows bridging your virtual machine directly to the host's network, but
requires elevated permissions on your OS and appropriate drivers which
often aren't available on Wi-Fi cards.

This commit adds a libslirp-based backend that provides just enough
internal networking to handle TCP/IP out of the guest to host, LAN or
Internet. As such things like ICMP, IPX and NetBIOS don't work properly.

The use case for this connection is to give Internet access to the guest
for things like IRC, HTTP and other connections to online services.

--- a/configure.ac
+++ b/configure.ac
@@ -982,6 +982,21 @@ case "$host" in
     ;;
 esac
 
+dnl FEATURE: Whether to use libslirp, and enable userspace TCP/IP emulation
+AH_TEMPLATE(C_SLIRP,[Define to 1 to enable userspace TCP/IP emulation, requires libslirp])
+AC_MSG_CHECKING(for libslirp)
+pkg-config --exists slirp; RES=$?
+if test x$RES = x0; then
+  CFLAGS="$CFLAGS "`pkg-config slirp --cflags`
+  CPPFLAGS="$CPPFLAGS "`pkg-config slirp --cflags`
+  LIBS="$LIBS "`pkg-config slirp --libs`
+  AC_DEFINE(C_SLIRP,1)
+  AC_MSG_RESULT(yes)
+else
+  AC_MSG_WARN([Can't find libslirp, userspace TCP/IP emulation disabled])
+  AC_MSG_RESULT(no)
+fi
+
 if test x$enable_x11 != xno; then
   dnl FEATURE: Whether to use X11 XKBlib
   AH_TEMPLATE(C_X11_XKB,[define to 1 if you have XKBlib.h and X11 lib])
