ethernet: Add EthernetConnection interface
Currently DOSBox-X only supports one emulated network adapter and one
network backend: the NE2000 using libpcap.

In order to change either of those we need an abstraction between them,
and as such I've written the EthernetConnection interface.

The EthernetConnection interface will be used by emulated network
adapters (such as the NE2000) to send and received Ethernet frames to
and from the guest, usually through a DOS packet driver.

The actual implementation of EthernetConnection objects will take the
packets sent from the emulated network adapter and pass them to some
kind of backend (such as libpcap) then pass any received packets from
the backend back to the guest network adapter.

This will allow more emulated Ethernet adapters and more network
backends to be implemented with minimal changes to unrelated code.

--- a/vs2015/dosbox-x.vcproj
+++ b/vs2015/dosbox-x.vcproj
@@ -747,6 +747,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\src\misc\ethernet.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\src\misc\messages.cpp"
 				>
 			</File>
