misc: Add net_pcap.cpp stub

--- a/vs2015/dosbox-x.vcproj
+++ b/vs2015/dosbox-x.vcproj
@@ -755,6 +755,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\src\misc\ethernet_pcap.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\src\gui\midi.cpp"
 				>
 			</File>
